--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <script src="script.js"></script>
     
 <nav id="desktop-nav">
-    <div class="logo">Bushra Al-andijani</div> 
+    <div class="logo">Bushra Al-Andijani</div> 
       <div >
         <ul id="nav-links" >
             <li><a href="#about">About</a></li>
