--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="details-container">
           <img src="./assets/experience.png" alt="experience icon" class="icon">
           <h3>Experience</h3>
-          <p>Cooperative Training as a Software Quality Assurance (QA) Test Engineer and Business Analyst at Tahakom Company.</p>
+          <p>Cooperative Training as a Quality Assurance Engineer and Business Analyst at Tahakom Company.</p>
         </div>
         <div class="details-container">
           <img src="./assets/education.png" alt="Education icon" class="icon">
