--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
     <h1 class="title">Bushra Al-Andijani</h1>
     <p class="sections__text__p2">Software Engineer</p>
     <div class="btn-container">
-      <button class="btn btn-color-2" onclick="window.open('')" href="./Bushra-Alandijani_Resume">
+      <button class="btn btn-color-2" onclick="window.open('')" href="./assets/Bushra-Alandijani_Resume">
        Download CV </button>
 
        <button class="btn btn-color-1" onclick="location.href='#contact'">
         Contact Info </button>
     </div>
     <div id="socials-contianer">
-      <img src="./assets/linkedin.png" alt="My linkedin profile" class="icon" onclick="location.href='https://linkedin.com/'">
+      <img src="./assets/linkedin.png" alt="My linkedin profile" class="icon" onclick="location.href='https://www.linkedin.com/in/bushra-alandijani-664571277/'">
       <img src="./assets/github.png" alt="My Github profile" class="icon" onclick="location.href='https://github.com/'">
     </div>
   </div>
