--- a/index.html
+++ b/index.html
@@ -105,35 +105,35 @@
           <article>
             <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
             <div>
-              <h3>HTML, CSS</h3>
+              <h3>Business Analysis</h3>
               <P>Experienced</P>
             </div>
           </article>
           <article>
             <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
             <div>
-              <h3>Java, Java Script</h3>
+              <h3>JProgramming</h3>
               <P>Experienced</P>
             </div>
           </article>
           <article>
             <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
             <div>
-              <h3>SQL</h3>
+              <h3>Software Testing</h3>
               <P>Experienced</P>
             </div>
           </article>
           <article>
             <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
             <div>
-              <h3>Testing</h3>
+              <h3>Agile Methodologies</h3>
               <P>Experienced</P>
             </div>
           </article>
           <article>
             <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
             <div>
-              <h3>Postman</h3>
+              <h3>Project Management</h3>
               <P>Intermediate</P>
             </div>
           </article>
