--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <h1 class="title">Bushra Al-Andijani</h1>
     <p class="sections__text__p2">Software Engineer</p>
     <div class="btn-container">
-      <button class="btn btn-color-2" onclick="window.open('')" href="./assets/Bushra-Alandijani_Resume.pdf">
+      <button class="btn btn-color-2" onclick="window.open('')" href="https://github.com/Bushra-Alandijani/updated-portfolio/blob/main/assets/Bushra-Alandijani_Resume.pdf">
        Download CV </button>
 
        <button class="btn btn-color-1" onclick="location.href='#contact'">
@@ -112,7 +112,7 @@
           <article>
             <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
             <div>
-              <h3>JProgramming</h3>
+              <h3>Programming</h3>
               <P>Experienced</P>
             </div>
           </article>
