--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <h1 class="title">Bushra Al-Andijani</h1>
     <p class="sections__text__p2">Software Engineer</p>
     <div class="btn-container">
-      <button class="btn btn-color-2" onclick="window.open('')" href="./assets/Bushra-Alandijani_Resume.pdf">
+      <button class="btn btn-color-2" onclick="window.open('')" href="">
        Download CV </button>
 
        <button class="btn btn-color-1" onclick="location.href='#contact'">
